packages/training-app/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: training-app
  labels:
    app.kubernetes.io/part-of: training-workload
